Adicionando o relatório HTML do mochawesome

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/matheuspnascimento/banco-web-tests#readme",
   "description": "",
   "devDependencies": {
-    "cypress": "^14.5.2"
+    "cypress": "^14.5.2",
+    "cypress-mochawesome-reporter": "^4.0.0"
   }
 }
